правки до завдання №1

--- a/task_01/Untitled-1.html
+++ b/task_01/Untitled-1.html
@@ -15,28 +15,36 @@
             <li>Настройки</li>
             <li>Инструменты</li>
         </ul>
-		
-		<div class="text">Результатов: примерно 56 000 (0,55 сек.)</div>
-        <br>
-        <div class="name">Мар'ян Шилов | ВКонтакте</div>
-        <div class="link">https://vk.com/id385609310</div>
-        <div class="text"><b>Мар'ян Шилов</b>. Войдите на сайт или зарегистрируйтесь, чтобы связаться с <b>Мар'яном Шиловым</b> или найти других Ваших друзей.</div>
-        <br>
-        <div class="name">Ян Шилов | Facebook</div>
-        <div class="link">https://ru-ru.facebook.com/jashka.lee</div>
-        <div class="text"><b>Ян Шилов</b> есть на Facebook. Присоединяйтесь к Facebook, чтобы связаться с <b>Яном Шиловым</b> и найти других друзей. Facebook предоставляет ...</div>
-        <br>
-        <br>
-        <div class="name">Картинки по запросу мар'ян шилов</div>
-        <br>
-        <div>
-            <img src="images/01.jpg" alt="авто1" height="90" width="87">
-            <img src="images/02.jpg" alt="авто2" height="90" width="90">
-            <img src="images/06.jpg" alt="портрет1" height="90" width="63">
-            <img src="images/07.jpg" alt="портрет2" height="90" width="48">
-            <img src="images/03.jpg" alt="авто3" height="90" width="108">
-            <img src="images/04.jpg" alt="авто4" height="90" width="115">
-            <img src="images/08.jpg" alt="портрет3" height="90" width="65">
+
+        <div class="results">
+            <div>
+                <div class="text">Результатов: примерно 56 000 (0,55 сек.)</div>
+                <div class="space"></div>
+            </div>
+            <div>
+                <div class="name">Мар'ян Шилов | ВКонтакте</div>
+                <div class="link">https://vk.com/id385609310</div>
+                <div class="text"><b>Мар'ян Шилов</b>. Войдите на сайт или зарегистрируйтесь, чтобы связаться с <b>Мар'яном Шиловым</b> или найти других Ваших друзей.</div>
+                <div class="space"></div>
+            </div>
+            <div>    
+                <div class="name">Ян Шилов | Facebook</div>
+                <div class="link">https://ru-ru.facebook.com/jashka.lee</div>
+                <div class="text"><b>Ян Шилов</b> есть на Facebook. Присоединяйтесь к Facebook, чтобы связаться с <b>Яном Шиловым</b> и найти других друзей. Facebook предоставляет ...</div>
+                <div class="space2"></div>
+            </div>
+            <div>
+                <div class="name">Картинки по запросу мар'ян шилов</div>
+                <div class="space"></div>
+            </div>
+        </div>
+        
+        <div class="images">
+            <img src="images/02.jpg" alt="авто2" height="90" width="135" />
+            <img src="images/07.jpg" alt="портрет2" height="90" width="68" />
+            <img src="images/03.jpg" alt="авто3" height="90" width="144" />
+            <img src="images/04.jpg" alt="авто4" height="90" width="144" />
+            <img src="images/08.jpg" alt="портрет3" height="90" width="73" />
         </div>
     </body>
 </html>
