--- a/task_01/Untitled-1.html
+++ b/task_01/Untitled-1.html
@@ -17,25 +17,21 @@
         </ul>
 
         <div class="results">
-            <div>
+            <div class="space">
                 <div class="text">Результатов: примерно 56 000 (0,55 сек.)</div>
-                <div class="space"></div>
             </div>
-            <div>
+            <div class="space">
                 <div class="name">Мар'ян Шилов | ВКонтакте</div>
                 <div class="link">https://vk.com/id385609310</div>
                 <div class="text"><b>Мар'ян Шилов</b>. Войдите на сайт или зарегистрируйтесь, чтобы связаться с <b>Мар'яном Шиловым</b> или найти других Ваших друзей.</div>
-                <div class="space"></div>
             </div>
-            <div>    
+            <div class="space2">    
                 <div class="name">Ян Шилов | Facebook</div>
                 <div class="link">https://ru-ru.facebook.com/jashka.lee</div>
                 <div class="text"><b>Ян Шилов</b> есть на Facebook. Присоединяйтесь к Facebook, чтобы связаться с <b>Яном Шиловым</b> и найти других друзей. Facebook предоставляет ...</div>
-                <div class="space2"></div>
             </div>
-            <div>
+            <div class="space">
                 <div class="name">Картинки по запросу мар'ян шилов</div>
-                <div class="space"></div>
             </div>
         </div>
         
